--- a/front/src/pages/authorization/login.module.css
+++ b/front/src/pages/authorization/login.module.css
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
-*{
+.mainLogin{
     margin: 0;
     padding:0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-}
-body{
     background-color: #c9d6ff;
     background: linear-gradient(to right, #e2e2e2,#c9d6ff);
     display: flex;
@@ -24,6 +22,7 @@ body{
     width:768px;
     max-width:100%;
     min-height: 480px;
+    display: flex;
 }
 .containerLogin p{
     font-size: 14px;
@@ -79,28 +78,31 @@ body{
     width: 100%;
     outline: none;
 }
-.form-container{
+.form_container{
     position: absolute;
     top:0;
     height: 100%;
     transition:  all 0.6s ease-in-out;
+    left: 15px;
+    width: 370px;
 }
-.sign-in{
+.sign_in{
     left:0;
     width: 50%;
     z-index: 2;
+    flex: 1;
 }
 
-.container.active .sign-in{
+.container.active .sign_in{
     transform: translateX(100%);
 }
-.sign-up{
+.sign_up{
     left: 0;
     width: 50%;
     opacity: 0;
     z-index: 1;
 }
-.container.active .sign-up{
+.container.active .sign_up{
     transform: translateX(100%);
     opacity: 1;
     z-index: 5;
@@ -117,7 +119,7 @@ body{
         z-index: 5;
     }
 }
-.toggle-container{
+.toggle_container{
     position: absolute;
     top: 0;
     left: 50%;
@@ -127,8 +129,9 @@ body{
     transition: all 0.6s ease-in-out;
     border-radius:  150px 0 0 100px;
     z-index: 1000;
+    flex: 1;
 }
-.container.active .toggle-container{
+.container.active .toggle_container{
     transform: translateX(-100%);
     border-radius:  0 150px 100px 0;
 }
@@ -150,7 +153,7 @@ body{
     transform: translateX(50%);
 }
 
-.toggle-panel{
+.toggle_panel{
     position: absolute;
     width:50%;
     height: 100%;
@@ -165,24 +168,25 @@ body{
     transition: all 0.6s ease-in-out;
 }
 
-.toggle-left{
+.toggle_left{
     transform: translateX(-200%);
 }
 
-.container.active .toggle-left{
+.container.active .toggle_left{
     transform: translateX(0);
 }
 
-.toggle-right{
+.toggle_right{
     right: 0;
-    transform: translateX(0);
+    transform: translateX(100%);
+    margin-right: -40px;
 }
 
-.container.active .toggle-right{
+.container.active .toggle_right{
     transform: translateX(200%);
 }
 
-.toggle-container a {
+.toggle_container a {
     color: #f5f5f5;
     text-decoration: none;
 }
