--- a/front/src/pages/dataBase/DataBase.module.css
+++ b/front/src/pages/dataBase/DataBase.module.css
@@ -36,6 +36,7 @@
   display: flex;
   flex-direction: row;
   padding-top: 80px;
+  height: auto;
 }
 
 header {
@@ -46,15 +47,15 @@ header {
 .search input {
   width: 100%;
   padding: 10px;
-
   border-radius: 5px;
   box-sizing: border-box;
+  padding-left: 40px;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
-  border-radius: 20px; /* Закругление углов таблицы */
+  border-radius: 20px;
   margin: 0 auto;
 }
 
@@ -68,8 +69,8 @@ th, td {
 
 th {
   background-color: #DCDCDC;
-  border-top-left-radius: 20px; /* Закругление верхнего левого угла */
-  border-top-right-radius: 20px; /* Закругление верхнего правого угла */
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 
 .data {
@@ -113,6 +114,20 @@ li:hover {
   margin-right: 10px;
 }
 
+.search img {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  left: 60px;
+  top: 9px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.search img:hover {
+  transform: scale(1.1);
+}
+
 .search-input {
   border: none;
   border-bottom: 1px solid #000;
@@ -127,54 +142,53 @@ li:hover {
 
 .data {
   flex: 1;
-  margin-left: 300px;
-  max-width: calc(100% - 1000px);
-  border-radius: 20px; /* Закругление углов таблицы */
-  border: 1px solid #000; /* Черная граница */
-  margin-right: 50px;
+  max-width: calc(100% - 1100px);
+  border-radius: 20px;
+  border: 1px solid #000;
   background-color: #f2f2f2;
 }
 
 .search {
-  flex: 0 0 450px;
+  flex: 0 0 50px;
   margin-right: 20px;
   padding-left: 50px;
+  position: relative;
+  width: 400px;
 }
 
 .tableDataBase {
   width: 100%;
   border-collapse: collapse;
- }
+}
 
 .tableDataBase tbody tr:first-child td {
-  padding-top: 20px; /* Add padding to the top of the first row in tbody */
+  padding-top: 20px;
 }
 
 .tableDataBase th {
   background-color: #e4e4e4;
-  border-top-left-radius: 20px; 
-  border-top-right-radius: 20px; 
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   border-bottom: none;
-  position: relative; 
+  position: relative;
   top: 10px;
 }
 
 .th_content {
-  /* ... other styles ... */
-  background-color: #e0e0e0; /* Example: light gray background */
+  background-color: #e0e0e0;
   font-weight: bold;
-  color:#214320;
+  color: #214320;
   font-size: 23px;
   text-align: center;
-} 
+}
+
 tbody td {
-  transition: transform 0.1s ease; /* Add transition for smooth scaling */
+  transition: transform 0.1s ease;
 }
 
 tbody td:hover {
-  transform: scale(1.005); /* Enlarge text on hover */
-  /* You can add additional styles here if needed, e.g., changing text color */
-  cursor:pointer;
+  transform: scale(1.005);
+  cursor: pointer;
 }
 
 .sort_icon {
@@ -186,4 +200,29 @@ tbody td:hover {
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+.reloadIcon {
+  width: 20px;
+  height: 20px;
+  margin-left: 350px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.reloadIcon:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.searchAndUserInfo {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 700px;
+}
+
+.widerTable {
+  width: 80%; /* Установите желаемую ширину таблицы */
+  margin: 0 auto; /* Центрируйте таблицу */
 }
