--- a/front/src/components/sliderBar/sliderBar.module.css
+++ b/front/src/components/sliderBar/sliderBar.module.css
@@ -1,9 +1,6 @@
 p.menu {
     font-weight: 700;
-  }
-  
-  p.menuCurrent {
-    font-weight: 800;
+    font-size: 20px;
   }
 
 .sidebar {
@@ -14,7 +11,7 @@ p.menu {
   flex: 0 0 auto;
   display: flex;
   min-height: 100vh;
-  padding-top: 30px;
+  padding-top: 50px;
 }
 
 
@@ -32,6 +29,6 @@ p.menu {
 
 .sidebar img {
   margin-right: 10px;
-  width: 20px;
+  width: 30px;
   height: auto;
 }
