--- a/front/src/pages/dataBase/DataBase.module.css
+++ b/front/src/pages/dataBase/DataBase.module.css
@@ -4,7 +4,7 @@
   padding-top: 30px;
 }
 
-.sidebar {
+/* .sidebar {
   background-color: #152E15;
   color: #fff;
   padding: 20px;
@@ -28,7 +28,7 @@
   margin-right: 10px;
   width: 20px;
   height: auto;
-}
+} */
 
 .content {
   flex-grow: 1;
@@ -39,10 +39,10 @@
   height: auto;
 }
 
-header {
+/* header {
   text-align: center;
   margin-bottom: 20px;
-}
+} */
 
 .search input {
   width: 100%;
