--- a/front/src/pages/dataBase/DataBase.module.css
+++ b/front/src/pages/dataBase/DataBase.module.css
@@ -68,7 +68,7 @@ th, td {
 }
 
 th {
-  background-color: #DCDCDC;
+  /* background-color: #DCDCDC; */
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
