orders by selected user

--- a/front/src/components/selectedUser/selectedUser.module.css
+++ b/front/src/components/selectedUser/selectedUser.module.css
@@ -6,7 +6,7 @@
     font-family: sans-serif;
     background-color: #f2f2f2;
     position: relative; /* для позиционирования кнопки закрытия */
-    left:52px;
+    margin-left: 50px;
   }
 
   .user_info_header {
